--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,20 @@
 * {}
 
+
+
+
+body {
+ font-size: 16px;
+}
 .title {
     text-align: center;
 }
 
-
+/* BARRA NAVEGACION */
 nav ul{
     background: rgb(255, 255, 255);
-    border-top: 0.1rem solid;
-    border-bottom: 0.1rem solid;
+    border-top: 0.1em solid;
+    border-bottom: 0.1em solid;
     list-style: none;
     margin: auto;
     width: 60%;
@@ -28,7 +34,38 @@ nav .nav1 li{
 nav ul li:hover {
     cursor: pointer;
     color: rgb(255, 255, 255);
-    border-left: 0.1rem solid;
-    border-right: 0.1rem solid;
+    border-left: 0.rem solid;
+    border-right: 0.rem solid;
     background: rgb(0, 0, 0);
+}
+/*Extra large devices /large desktops, 1200px and up) */
+@media (max-width: 1200px) {
+    .nav1 {
+        font-size: 14px;
+    }
+
+}
+
+/*Extra large devices /large desktops, 992px and up) */
+@media (max-width: 992px) {
+    .nav1 {
+        font-size: 12px;
+    }
+
+}
+
+/*Extra large devices /large desktops, 768px and up) */
+@media (max-width: 768px) {
+    .nav1 {
+        font-size: 10px;
+    }
+
+}
+
+/*Extra large devices /large desktops, 576px and up) */
+@media (max-width: 576px) {
+    .nav1 {
+        font-size: 8px ;
+    }
+
 }
